--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SWPS - GTPS</title>
+
+  <!-- Tambahkan Font Rammetto One -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,7 +19,9 @@
       padding: 2rem;
       text-align: center;
     }
+
     h1 {
+      font-family: 'Rammetto One', cursive;
       font-size: 3rem;
       background: linear-gradient(90deg, red, green, blue);
       background-size: 300% 300%;
@@ -22,11 +30,13 @@
       -webkit-text-fill-color: transparent;
       margin-bottom: 0.5em;
     }
+
     @keyframes colorShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+
     .section {
       background: #1e1e2e;
       padding: 1.5rem;
@@ -34,11 +44,13 @@
       border-radius: 12px;
       max-width: 700px;
     }
+
     a {
       color: cyan;
       font-weight: bold;
       text-decoration: none;
     }
+
     pre {
       background: #2c2c3d;
       padding: 1rem;
@@ -46,6 +58,7 @@
       text-align: left;
       overflow-x: auto;
     }
+
     button {
       margin: 0.3rem;
       padding: 0.5rem 1rem;
@@ -55,9 +68,18 @@
       color: white;
       cursor: pointer;
     }
+
     .status-online { color: lime; }
-    .platform-tab { display: none; text-align: left; margin-top: 1rem; }
-    .platform-tab.active { display: block; }
+
+    .platform-tab {
+      display: none;
+      text-align: left;
+      margin-top: 1rem;
+    }
+
+    .platform-tab.active {
+      display: block;
+    }
   </style>
 </head>
 <body>
