--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SWPS - GTPS</title>
 
-  <!-- Tambahkan Font Rammetto One -->
+  <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
@@ -23,12 +23,14 @@
     h1 {
       font-family: 'Rammetto One', cursive;
       font-size: 3rem;
-      background: linear-gradient(90deg, red, green, blue);
-      background-size: 300% 300%;
-      animation: colorShift 5s infinite;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      color: #3498db; /* biru */
       margin-bottom: 0.5em;
+    }
+
+    @keyframes blinkGreen {
+      0% { color: #00ff00; }
+      50% { color: #008000; }
+      100% { color: #00ff00; }
     }
 
     @keyframes colorShift {
@@ -45,10 +47,24 @@
       max-width: 700px;
     }
 
-    a {
-      color: cyan;
+    .colorful-box {
+      background: #1c1c2c;
+      border-radius: 10px;
+      padding: 1rem;
+      margin: 1rem auto;
+      max-width: 600px;
+    }
+
+    .colorful-box a {
+      display: inline-block;
+      background: linear-gradient(90deg, red, green, blue);
+      background-size: 300% 300%;
+      animation: colorShift 3s infinite;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       font-weight: bold;
       text-decoration: none;
+      font-size: 1.2rem;
     }
 
     pre {
@@ -69,7 +85,11 @@
       cursor: pointer;
     }
 
-    .status-online { color: lime; }
+    .status-online {
+      animation: blinkGreen 1s infinite;
+      font-weight: bold;
+      font-size: 1.2rem;
+    }
 
     .platform-tab {
       display: none;
@@ -91,25 +111,25 @@
     <div id="server-status" class="status-online">🟢 ONLINE</div>
   </div>
 
-  <!-- Download Vhost -->
-  <div class="section">
+  <!-- Vhost -->
+  <div class="colorful-box">
     <h2>Download Host (vhost)</h2>
     <a href="https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file" target="_blank">Klik di sini untuk download</a>
   </div>
 
-  <!-- Copy Ptunnel -->
-  <div class="section">
+  <!-- Ptunnel -->
+  <div class="colorful-box">
     <h2>Copy Ptunnel</h2>
     <a href="https://growsoft.cc/android.txt" target="_blank">Klik di sini untuk salin ptunnel</a>
   </div>
 
-  <!-- Copy iOS Host -->
-  <div class="section">
+  <!-- iOS Host -->
+  <div class="colorful-box">
     <h2>Copy iOS Host (Surge 5)</h2>
     <a href="https://growsoft.cc/ios.txt" target="_blank">Klik di sini untuk salin host iOS</a>
   </div>
 
-  <!-- Hosts untuk Windows -->
+  <!-- Windows Hosts -->
   <div class="section">
     <h2>Host untuk Windows</h2>
     <pre>
