--- a/index.html
+++ b/index.html
@@ -2,120 +2,128 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SWPS - GTPS</title>  <!-- Font & Styles -->  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <title>SWPS - GTPS</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
     body {
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Rammetto One', cursive;
       background: #121212;
       color: white;
       margin: 0;
       padding: 2rem;
       text-align: center;
-      position: relative;
-    }
-    h1 {
-      font-family: 'Rammetto One', sans-serif;
-      font-size: 3rem;
-      background: linear-gradient(90deg, #00f, #00f 50%, #00f);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: colorShift 5s infinite;
-      margin-bottom: 0.5em;
-    }
-    @keyframes colorShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-    .section {
-      background: #1e1e2e;
-      padding: 1.5rem;
-      margin: 1.5rem auto;
-      border-radius: 12px;
-      max-width: 700px;
-      box-shadow: 0 0 15px rgba(0,255,255,0.2);
-    }
-    a {
-      color: cyan;
-      font-weight: bold;
-      text-decoration: none;
-      transition: 0.2s;
-    }
-    a:hover {
-      color: #0ff;
-    }
-    pre {
-      background: #2c2c3d;
-      padding: 1rem;
-      border-radius: 8px;
-      text-align: left;
-      overflow-x: auto;
-    }
-    button {
-      margin: 0.3rem;
-      padding: 0.5rem 1rem;
-      background: #333;
-      border: none;
-      border-radius: 6px;
-      color: white;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-    button:hover {
-      background-color: #444;
-      transform: scale(1.05);
-    }
-    .status-online {
-      color: lime;
-      font-weight: bold;
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.3; }
-    }
-    .platform-tab {
-      display: none;
-      text-align: left;
-      margin-top: 1rem;
-    }
-    .platform-tab.active {
-      display: block;
-    }
-    .rgb-title {
-      font-size: 1.5rem;
-      font-weight: bold;
-      background: linear-gradient(90deg, red, green, blue);
-      background-size: 300% 300%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: colorShift 5s infinite;
-    }
-    footer {
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #888;
-    }
+      overflow-x: hidden;
+    }#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+h1 {
+  font-size: 3rem;
+  color: blue;
+  margin-bottom: 0.5em;
+}
+
+.status-online {
+  color: lime;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0.3; }
+  100% { opacity: 1; }
+}
+
+.section {
+  background: #1e1e2e;
+  padding: 1.5rem;
+  margin: 1.5rem auto;
+  border-radius: 12px;
+  max-width: 700px;
+}
+
+.section h2 {
+  background: linear-gradient(90deg, red, green, blue);
+  background-size: 300% 300%;
+  animation: colorShift 5s infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1.6rem;
+}
+
+@keyframes colorShift {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+a {
+  color: cyan;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+pre {
+  background: #2c2c3d;
+  padding: 1rem;
+  border-radius: 8px;
+  text-align: left;
+  overflow-x: auto;
+}
+
+button {
+  margin: 0.3rem;
+  padding: 0.5rem 1rem;
+  background: #333;
+  border: none;
+  border-radius: 6px;
+  color: white;
+  cursor: pointer;
+}
+
+.platform-tab { display: none; text-align: left; margin-top: 1rem; }
+.platform-tab.active { display: block; }
+
+.alert {
+  background: #00b300;
+  color: white;
+  padding: 10px;
+  border-radius: 8px;
+  display: none;
+  margin-top: 1rem;
+  animation: fadeInOut 2s ease-in-out forwards;
+}
+
+@keyframes fadeInOut {
+  0% { opacity: 0; }
+  20% { opacity: 1; }
+  80% { opacity: 1; }
+  100% { opacity: 0; display: none; }
+}
+
   </style>
 </head>
 <body>
-  <h1>SWPS</h1>  <!-- Status Server -->  <div class="section">
+  <div id="particles-js"></div>  <h1>SWPS</h1>  <!-- Status Server -->  <div class="section">
     <h2>Status Server</h2>
     <div id="server-status" class="status-online">🟢 ONLINE</div>
-  </div>  <!-- Download Sections -->  <div class="section">
-    <div class="rgb-title">Download Host (vhost)</div>
-    <a href="https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file" target="_blank">Klik di sini untuk download</a>
-  </div>  <div class="section">
-    <div class="rgb-title">Copy Ptunnel</div>
-    <a href="https://growsoft.cc/android.txt" target="_blank">Klik di sini untuk salin ptunnel</a>
-  </div>  <div class="section">
-    <div class="rgb-title">Copy iOS Host (Surge 5)</div>
-    <a href="https://growsoft.cc/ios.txt" target="_blank">Klik di sini untuk salin host iOS</a>
-  </div>  <div class="section">
+  </div>  <!-- Download Vhost -->  <div class="section">
+    <h2>Download Host (vhost)</h2>
+    <a href="https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file" target="_blank" onclick="showAlert('Link berhasil disalin!')">Klik di sini untuk download</a>
+  </div>  <!-- Copy Ptunnel -->  <div class="section">
+    <h2>Copy Ptunnel</h2>
+    <a href="https://growsoft.cc/android.txt" target="_blank" onclick="showAlert('Link berhasil disalin!')">Klik di sini untuk salin ptunnel</a>
+  </div>  <!-- Copy iOS Host -->  <div class="section">
+    <h2>Copy iOS Host (Surge 5)</h2>
+    <a href="https://growsoft.cc/ios.txt" target="_blank" onclick="showAlert('Link berhasil disalin!')">Klik di sini untuk salin host iOS</a>
+  </div>  <!-- Hosts untuk Windows -->  <div class="section">
     <h2>Host untuk Windows</h2>
     <pre>
 91.134.85.13 growtopia1.com
@@ -158,16 +166,32 @@
   </ol>
 </div>
 
-  </div>  <!-- Footer -->  <footer>
-    &copy; 2025 SWPS GTPS. Dibuat oleh Admin SWPS. |
-    <a href="https://t.me/yourusername" target="_blank">Kontak Telegram</a>
-  </footer>  <!-- Optional music (disable sound by default) -->  <!-- <audio autoplay loop hidden>
-    <source src="musik.mp3" type="audio/mpeg">
-  </audio> -->  <script>
+  </div>  <div class="alert" id="alert-box">✅ Link berhasil disalin!</div>  <script>
     function showTab(tabId) {
       const tabs = document.querySelectorAll('.platform-tab');
       tabs.forEach(tab => tab.classList.remove('active'));
       document.getElementById(tabId).classList.add('active');
     }
+
+    function showAlert(message) {
+      const box = document.getElementById('alert-box');
+      box.textContent = message;
+      box.style.display = 'block';
+      setTimeout(() => box.style.display = 'none', 2000);
+    }
+  </script>  <!-- Particles.js -->  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>  <script>
+    particlesJS("particles-js", {
+      particles: {
+        number: { value: 60 },
+        size: { value: 2 },
+        color: { value: "#ffffff" },
+        line_linked: { enable: false },
+        move: { speed: 0.5 }
+      },
+      interactivity: {
+        events: { onhover: { enable: false } },
+        modes: {}
+      }
+    });
   </script></body>
 </html>
