--- a/index.html
+++ b/index.html
@@ -1,197 +1,75 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SWPS - GTPS</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Rammetto One', cursive;
-      background: #121212;
-      color: white;
-      margin: 0;
-      padding: 2rem;
-      text-align: center;
-      overflow-x: hidden;
-    }#particles-js {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  top: 0;
-  left: 0;
-}
-
-h1 {
-  font-size: 3rem;
-  color: blue;
-  margin-bottom: 0.5em;
-}
-
-.status-online {
-  color: lime;
-  animation: blink 1s infinite;
-}
-
-@keyframes blink {
-  0% { opacity: 1; }
-  50% { opacity: 0.3; }
-  100% { opacity: 1; }
-}
-
-.section {
-  background: #1e1e2e;
-  padding: 1.5rem;
-  margin: 1.5rem auto;
-  border-radius: 12px;
-  max-width: 700px;
-}
-
-.section h2 {
-  background: linear-gradient(90deg, red, green, blue);
-  background-size: 300% 300%;
-  animation: colorShift 5s infinite;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 1.6rem;
-}
-
-@keyframes colorShift {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-
-a {
-  color: cyan;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-pre {
-  background: #2c2c3d;
-  padding: 1rem;
-  border-radius: 8px;
-  text-align: left;
-  overflow-x: auto;
-}
-
-button {
-  margin: 0.3rem;
-  padding: 0.5rem 1rem;
-  background: #333;
-  border: none;
-  border-radius: 6px;
-  color: white;
-  cursor: pointer;
-}
-
-.platform-tab { display: none; text-align: left; margin-top: 1rem; }
-.platform-tab.active { display: block; }
-
-.alert {
-  background: #00b300;
-  color: white;
-  padding: 10px;
-  border-radius: 8px;
-  display: none;
-  margin-top: 1rem;
-  animation: fadeInOut 2s ease-in-out forwards;
-}
-
-@keyframes fadeInOut {
-  0% { opacity: 0; }
-  20% { opacity: 1; }
-  80% { opacity: 1; }
-  100% { opacity: 0; display: none; }
-}
-
-  </style>
+    <title>SWPS</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+        h1 {
+            color: #0066cc;
+        }
+        .server-status {
+            color: #00aa00;
+            font-weight: bold;
+        }
+        .section {
+            margin-bottom: 30px;
+            padding: 15px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        button {
+            background-color: #0066cc;
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            margin: 5px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0055aa;
+        }
+    </style>
 </head>
 <body>
-  <div id="particles-js"></div>  <h1>SWPS</h1>  <!-- Status Server -->  <div class="section">
-    <h2>Status Server</h2>
-    <div id="server-status" class="status-online">🟢 ONLINE</div>
-  </div>  <!-- Download Vhost -->  <div class="section">
-    <h2>Download Host (vhost)</h2>
-    <a href="https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file" target="_blank" onclick="showAlert('Link berhasil disalin!')">Klik di sini untuk download</a>
-  </div>  <!-- Copy Ptunnel -->  <div class="section">
-    <h2>Copy Ptunnel</h2>
-    <a href="https://growsoft.cc/android.txt" target="_blank" onclick="showAlert('Link berhasil disalin!')">Klik di sini untuk salin ptunnel</a>
-  </div>  <!-- Copy iOS Host -->  <div class="section">
-    <h2>Copy iOS Host (Surge 5)</h2>
-    <a href="https://growsoft.cc/ios.txt" target="_blank" onclick="showAlert('Link berhasil disalin!')">Klik di sini untuk salin host iOS</a>
-  </div>  <!-- Hosts untuk Windows -->  <div class="section">
-    <h2>Host untuk Windows</h2>
-    <pre>
-91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com
-    </pre>
-  </div>  <!-- Tab Platform -->  <div class="section">
-    <h2>Petunjuk Platform</h2>
-    <div>
-      <button onclick="showTab('android')">Android</button>
-      <button onclick="showTab('ios')">iOS</button>
-      <button onclick="showTab('windows')">Windows</button>
-    </div><div id="android" class="platform-tab active">
-  <ol>
-    <li>Download Powertunnel: <a href="https://github.com/krlvm/PowerTunnel-Android/releases/download/v2.6.3/PowerTunnel.apk" target="_blank">PowerTunnel.apk</a></li>
-    <li>Klik tombol "Powertunnel" untuk menyalin link host</li>
-    <li>Buka aplikasi Powertunnel → klik ikon tiga garis → host settings</li>
-    <li>Tempel URL host, ubah update period ke "on start"</li>
-    <li>Selesai, buka Growtopia dan login ke GTPS</li>
-  </ol>
-</div>
+    <h1>SWPS</h1>
+    
+    <div class="section">
+        <p class="server-status">Server Status: Online</p>
+    </div>
 
-<div id="ios" class="platform-tab">
-  <ol>
-    <li>Download app "Surge 5" dari App Store</li>
-    <li>Tekan "OK" → klik "Default.conf" → klik "IMPORT"</li>
-    <li>Salin URL dari tombol iOS di atas → OK → Done</li>
-    <li>Tekan SETUP dan izinkan konfigurasi VPN</li>
-    <li>Selesai, buka Growtopia dan konek ke GTPS</li>
-  </ol>
-</div>
+    <div class="section">
+        <h3><a href="https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file" target="_blank">Download Host (VHost)</a></h3>
+        <a href="https://growsoft.cc/android.txt" target="_blank"><button>Launch with Trident</button></a>
+        <a href="https://growsoft.cc/ios.txt" target="_blank"><button>Copy iOS Host (Surge 5)</button></a>
+        
+        <p>91.134.85.13 growtopia1.com<br>
+        91.134.85.13 growtopia2.com<br>
+        91.134.85.13 www.growtopia1.com<br>
+        91.134.85.13 www.growtopia2.com</p>
+    </div>
 
-<div id="windows" class="platform-tab">
-  <ol>
-    <li>Tekan ⊞ Win+R → ketik: <code>C:\Windows\System32\drivers\etc</code></li>
-    <li>Edit file <code>hosts</code> dengan Notepad</li>
-    <li>Tambahkan IP dari atas</li>
-    <li>Simpan lalu buka Growtopia</li>
-  </ol>
-</div>
+    <div class="section">
+        <h2>Android iOS Windows</h2>
+        <ol>
+            <li>First, download Powertunnel APP from here.</li>
+            <li>Click the "Launch with Trident" button above.</li>
+            <li>Open the Powertunnel app, tap the icon, then the icon.</li>
+            <li>Paste the copied URL and change "Update period" to "On start".</li>
+            <li>Enter server name: SWPS</li>
+        </ol>
+    </div>
 
-  </div>  <div class="alert" id="alert-box">✅ Link berhasil disalin!</div>  <script>
-    function showTab(tabId) {
-      const tabs = document.querySelectorAll('.platform-tab');
-      tabs.forEach(tab => tab.classList.remove('active'));
-      document.getElementById(tabId).classList.add('active');
-    }
-
-    function showAlert(message) {
-      const box = document.getElementById('alert-box');
-      box.textContent = message;
-      box.style.display = 'block';
-      setTimeout(() => box.style.display = 'none', 2000);
-    }
-  </script>  <!-- Particles.js -->  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>  <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 60 },
-        size: { value: 2 },
-        color: { value: "#ffffff" },
-        line_linked: { enable: false },
-        move: { speed: 0.5 }
-      },
-      interactivity: {
-        events: { onhover: { enable: false } },
-        modes: {}
-      }
-    });
-  </script></body>
+    <div class="section">
+        <h3>Your Connection</h3>
+    </div>
+</body>
 </html>
