--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SWPS - GTPS</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -44,54 +42,63 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-    .section {
+
+    .card-button {
       background: var(--section-bg);
-      padding: 1.5rem;
-      margin: 1.5rem auto;
+      color: var(--text-color);
       border-radius: 12px;
-      max-width: 700px;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-    a {
-      color: var(--accent-color);
-      font-weight: bold;
-      text-decoration: none;
-    }
-    pre {
-      background: #2c2c3d;
-      padding: 1rem;
-      border-radius: 8px;
-      text-align: left;
-      overflow-x: auto;
-    }
-    button {
-      margin: 0.3rem;
-      padding: 0.5rem 1rem;
-      background: #333;
-      border: none;
-      border-radius: 6px;
-      color: white;
+      text-align: center;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: background 0.3s, transform 0.2s;
     }
+
+    .card-button:hover {
+      background: #2a2a3a;
+      transform: scale(1.01);
+    }
+
     .status-online {
       color: lime;
+      font-weight: bold;
       animation: blink 1s infinite alternate;
     }
+
     @keyframes blink {
       0% { opacity: 1; }
       100% { opacity: 0.5; }
     }
-    .platform-tab { display: none; text-align: left; margin-top: 1rem; }
-    .platform-tab.active { display: block; }
 
-    /* Toggle Theme Button */
     .theme-toggle {
       position: fixed;
       top: 1rem;
       right: 1rem;
       background: transparent;
       font-size: 1.5rem;
+      border: none;
+      color: var(--text-color);
+      cursor: pointer;
+    }
+
+    .footer-info {
+      position: fixed;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 0.75rem;
+      color: rgba(255, 255, 255, 0.35);
+      pointer-events: none;
+      user-select: none;
+      z-index: 999;
+      text-align: center;
+    }
+    body.light .footer-info {
+      color: rgba(0, 0, 0, 0.35);
     }
   </style>
 </head>
@@ -102,93 +109,41 @@
   <h1>SWPS</h1>
 
   <!-- Status Server -->
-  <div class="section">
+  <div class="card-button">
     <h2>Status Server</h2>
-    <div id="server-status" class="status-online">🟢 ONLINE</div>
+    <div class="status-online">🟢 ONLINE</div>
   </div>
 
   <!-- Download Vhost -->
-  <div class="section">
-    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Download Host (vhost)</h2>
-    <a href="https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file" target="_blank">Klik di sini untuk download</a>
+  <div class="card-button" onclick="window.open('https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file', '_blank')">
+    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
+      Download Host (vhost)
+    </h2>
+    <p>Klik untuk download file host</p>
   </div>
 
   <!-- Copy Ptunnel -->
-  <div class="section">
-    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Copy Ptunnel</h2>
-    <button onclick="copyToClipboard('https://growsoft.cc/android.txt')">Klik di sini untuk salin ptunnel</button>
+  <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/android.txt')">
+    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
+      Copy Ptunnel
+    </h2>
+    <p>Klik untuk salin link ptunnel</p>
   </div>
 
   <!-- Copy iOS Host -->
-  <div class="section">
-    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Copy iOS Host (Surge 5)</h2>
-    <button onclick="copyToClipboard('https://growsoft.cc/ios.txt')">Klik di sini untuk salin host iOS</button>
+  <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/ios.txt')">
+    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
+      Copy iOS Host (Surge 5)
+    </h2>
+    <p>Klik untuk salin host iOS</p>
   </div>
 
-  <!-- Hosts untuk Windows -->
-  <div class="section">
-    <h2>Host untuk Windows</h2>
-    <pre>
-91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com
-    </pre>
+  <!-- Watermark Footer -->
+  <div class="footer-info">
+    © 2025 <strong>SWPS</strong>. Created by <strong>Azazil</strong>. Built on the <strong>Growsoft Platform</strong>.
   </div>
 
-  <!-- Tab Platform -->
-  <div class="section">
-    <h2>Petunjuk Platform</h2>
-    <div>
-      <button onclick="showTab('android')">Android</button>
-      <button onclick="showTab('ios')">iOS</button>
-      <button onclick="showTab('windows')">Windows</button>
-    </div>
-
-    <div id="android" class="platform-tab active">
-      <ol>
-        <li>Download Powertunnel: <a href="https://github.com/krlvm/PowerTunnel-Android/releases/download/v2.6.3/PowerTunnel.apk" target="_blank">PowerTunnel.apk</a></li>
-        <li>Klik tombol "Powertunnel" untuk menyalin link host</li>
-        <li>Buka aplikasi Powertunnel → klik ikon tiga garis → host settings</li>
-        <li>Tempel URL host, ubah update period ke "on start"</li>
-        <li>Selesai, buka Growtopia dan login ke GTPS</li>
-      </ol>
-    </div>
-
-    <div id="ios" class="platform-tab">
-      <ol>
-        <li>Download app "Surge 5" dari App Store</li>
-        <li>Tekan "OK" → klik "Default.conf" → klik "IMPORT"</li>
-        <li>Salin URL dari tombol iOS di atas → OK → Done</li>
-        <li>Tekan SETUP dan izinkan konfigurasi VPN</li>
-        <li>Selesai, buka Growtopia dan konek ke GTPS</li>
-      </ol>
-    </div>
-
-    <div id="windows" class="platform-tab">
-      <ol>
-        <li>Tekan ⊞ Win+R → ketik: <code>C:\Windows\System32\drivers\etc</code></li>
-        <li>Edit file <code>hosts</code> dengan Notepad</li>
-        <li>Tambahkan IP dari atas</li>
-        <li>Simpan lalu buka Growtopia</li>
-      </ol>
-    </div>
-  </div>
-
-  <!-- Footer -->
-  <div class="section" style="font-size: 0.9rem; margin-top: 3rem; opacity: 0.8;">
-    © 2025 <strong>SWPS</strong>. Created by <strong>Azazil</strong>.<br>
-    Built on the <strong>Growsoft Platform</strong>.
-  </div>
-
-  <!-- Script -->
   <script>
-    function showTab(tabId) {
-      const tabs = document.querySelectorAll('.platform-tab');
-      tabs.forEach(tab => tab.classList.remove('active'));
-      document.getElementById(tabId).classList.add('active');
-    }
-
     function toggleTheme() {
       const body = document.body;
       const toggleBtn = document.querySelector('.theme-toggle');
@@ -197,20 +152,20 @@
       toggleBtn.textContent = body.classList.contains('light') ? '☀️' : '🌙';
     }
 
-    function loadTheme() {
-      const savedTheme = localStorage.getItem('theme');
-      if (savedTheme === 'light') {
-        document.body.classList.add('light');
-        document.querySelector('.theme-toggle').textContent = '☀️';
-      }
-    }
-
     function copyToClipboard(text) {
       navigator.clipboard.writeText(text).then(() => {
         alert("✅ Link berhasil disalin:\n" + text);
       }, () => {
         alert("❌ Gagal menyalin link");
       });
+    }
+
+    function loadTheme() {
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme === 'light') {
+        document.body.classList.add('light');
+        document.querySelector('.theme-toggle').textContent = '☀️';
+      }
     }
 
     loadTheme();
