--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -127,22 +128,32 @@
 </head>
 <body>
   <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-  <h1>SWPS</h1>  <div class="card-button">
+  <h1>SWPS</h1>
+
+  <div class="card-button">
     <h2>Status Server</h2>
     <div class="status-online">🟢 Server Status: Online</div>
-  </div>  <div class="card-button" onclick="window.open('https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file', '_blank')">
+  </div>
+
+  <div class="card-button" onclick="window.open('https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file', '_blank')">
     <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
       Download Host (vhost)
     </h2>
-  </div>  <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/android.txt')">
+  </div>
+
+  <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/android.txt')">
     <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
       Copy Ptunnel
     </h2>
-  </div>  <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/ios.txt')">
+  </div>
+
+  <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/ios.txt')">
     <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
       Copy iOS Host (Surge 5)
     </h2>
-  </div>  <div class="section">
+  </div>
+
+  <div class="section">
     <h2>Host untuk Windows</h2>
     <pre>
 91.134.85.13 growtopia1.com
@@ -150,44 +161,51 @@
 91.134.85.13 www.growtopia1.com
 91.134.85.13 www.growtopia2.com
     </pre>
-  </div>  <div class="section">
+  </div>
+
+  <div class="section">
     <h2>Petunjuk Platform</h2>
     <div class="tab-buttons">
       <button onclick="showTab('android')">Android</button>
       <button onclick="showTab('ios')">iOS</button>
       <button onclick="showTab('windows')">Windows</button>
-    </div><div id="android" class="platform-tab active">
-  <ol>
-    <li>Download Powertunnel: <a href="https://github.com/krlvm/PowerTunnel-Android/releases/download/v2.6.3/PowerTunnel.apk" target="_blank">PowerTunnel.apk</a></li>
-    <li>Klik tombol "Copy Ptunnel" di atas untuk salin link</li>
-    <li>Buka Powertunnel → klik ikon tiga garis → Host settings</li>
-    <li>Tempel URL host, ubah update period ke "on start"</li>
-    <li>Selesai, buka Growtopia dan login ke GTPS</li>
-  </ol>
-</div>
+    </div>
 
-<div id="ios" class="platform-tab">
-  <ol>
-    <li>Download app "Surge 5" dari App Store</li>
-    <li>Tekan "OK" → klik "Default.conf" → klik "IMPORT"</li>
-    <li>Salin URL dari tombol iOS di atas → OK → Done</li>
-    <li>Tekan SETUP dan izinkan konfigurasi VPN</li>
-    <li>Selesai, buka Growtopia dan konek ke GTPS</li>
-  </ol>
-</div>
+    <div id="android" class="platform-tab active">
+      <ol>
+        <li>Download Powertunnel: <a href="https://github.com/krlvm/PowerTunnel-Android/releases/download/v2.6.3/PowerTunnel.apk" target="_blank">PowerTunnel.apk</a></li>
+        <li>Klik tombol "Copy Ptunnel" di atas untuk salin link</li>
+        <li>Buka Powertunnel → klik ikon tiga garis → Host settings</li>
+        <li>Tempel URL host, ubah update period ke "on start"</li>
+        <li>Selesai, buka Growtopia dan login ke GTPS</li>
+      </ol>
+    </div>
 
-<div id="windows" class="platform-tab">
-  <ol>
-    <li>Tekan ⊞ Win+R → ketik: <code>C:\Windows\System32\drivers\etc</code></li>
-    <li>Edit file <code>hosts</code> dengan Notepad</li>
-    <li>Tambahkan IP dari atas</li>
-    <li>Simpan lalu buka Growtopia</li>
-  </ol>
-</div>
+    <div id="ios" class="platform-tab">
+      <ol>
+        <li>Download app "Surge 5" dari App Store</li>
+        <li>Tekan "OK" → klik "Default.conf" → klik "IMPORT"</li>
+        <li>Salin URL dari tombol iOS di atas → OK → Done</li>
+        <li>Tekan SETUP dan izinkan konfigurasi VPN</li>
+        <li>Selesai, buka Growtopia dan konek ke GTPS</li>
+      </ol>
+    </div>
 
-  </div>  <div class="footer-info">
+    <div id="windows" class="platform-tab">
+      <ol>
+        <li>Tekan ⊞ Win+R → ketik: <code>C:\Windows\System32\drivers\etc</code></li>
+        <li>Edit file <code>hosts</code> dengan Notepad</li>
+        <li>Tambahkan IP dari atas</li>
+        <li>Simpan lalu buka Growtopia</li>
+      </ol>
+    </div>
+  </div>
+
+  <div class="footer-info">
     © 2025 <strong>SWPS</strong>. Created by <strong>Azazil</strong>. Built on the <strong>Growsoft Platform</strong>.
-  </div>  <script>
+  </div>
+
+  <script>
     function toggleTheme() {
       const body = document.body;
       const toggleBtn = document.querySelector('.theme-toggle');
@@ -215,5 +233,6 @@
       document.getElementById(tabId).classList.add('active');
     }
     loadTheme();
-  </script></body>
+  </script>
+</body>
 </html>
