--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       background: var(--bg-color);
       color: var(--text-color);
       margin: 0;
-      padding: 2rem;
+      padding: 2rem 1rem 5rem;
       text-align: center;
       transition: background 0.5s, color 0.5s;
     }
@@ -35,22 +35,26 @@
       animation: colorShift 5s infinite;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      margin-bottom: 1em;
+      margin-bottom: 2rem;
     }
     @keyframes colorShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+    .card-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.5rem;
+      margin-bottom: 2rem;
+    }
     .card-button {
       background: var(--section-bg);
       color: var(--text-color);
       border-radius: 12px;
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
+      padding: 2rem;
+      width: 260px;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
       text-align: center;
       cursor: pointer;
@@ -58,7 +62,17 @@
     }
     .card-button:hover {
       background: #2a2a3a;
-      transform: scale(1.01);
+      transform: scale(1.03);
+    }
+    .card-button h2 {
+      font-size: 1.2rem;
+      margin: 0;
+      background: linear-gradient(90deg, red, green, blue);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .status-box {
+      margin-bottom: 2rem;
     }
     .status-online {
       color: lime;
@@ -78,21 +92,6 @@
       border: none;
       color: var(--text-color);
       cursor: pointer;
-    }
-    .footer-info {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 0.75rem;
-      color: rgba(255, 255, 255, 0.35);
-      pointer-events: none;
-      user-select: none;
-      z-index: 999;
-      text-align: center;
-    }
-    body.light .footer-info {
-      color: rgba(0, 0, 0, 0.35);
     }
     .section {
       background: var(--section-bg);
@@ -124,33 +123,35 @@
     .tab-buttons button:hover {
       background: #444;
     }
+    .footer-info {
+      margin-top: 4rem;
+      font-size: 0.8rem;
+      color: rgba(255, 255, 255, 0.35);
+      text-align: center;
+    }
+    body.light .footer-info {
+      color: rgba(0, 0, 0, 0.35);
+    }
   </style>
 </head>
 <body>
   <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
   <h1>SWPS</h1>
 
-  <div class="card-button">
-    <h2>Status Server</h2>
+  <div class="status-box">
     <div class="status-online">🟢 Server Status: Online</div>
   </div>
 
-  <div class="card-button" onclick="window.open('https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file', '_blank')">
-    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
-      Download Host (vhost)
-    </h2>
-  </div>
-
-  <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/android.txt')">
-    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
-      Copy Ptunnel
-    </h2>
-  </div>
-
-  <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/ios.txt')">
-    <h2 style="background: linear-gradient(90deg, red, green, blue); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
-      Copy iOS Host (Surge 5)
-    </h2>
+  <div class="card-grid">
+    <div class="card-button" onclick="window.open('https://www.mediafire.com/file/ntm350bmfbq9fi8/SWPS.txt/file', '_blank')">
+      <h2>Download Host (vhost)</h2>
+    </div>
+    <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/android.txt')">
+      <h2>Copy Ptunnel</h2>
+    </div>
+    <div class="card-button" onclick="copyToClipboard('https://growsoft.cc/ios.txt')">
+      <h2>Copy iOS Host (Surge 5)</h2>
+    </div>
   </div>
 
   <div class="section">
